[gd_scene load_steps=44 format=2]

[ext_resource path="res://assets/Themes_v2/MANSION/M_Slave_Module.tres" type="Theme" id=1]
[ext_resource path="res://assets/Textures_v2/Universal/SlaveTooltipPanel.tres" type="StyleBox" id=2]
[ext_resource path="res://assets/Fonts_v2/PT_Sans/PTSans-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/Fonts_v2/PT_Sans/PTSans-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/Fonts_v2/FontThemes/MainSmallBold.tres" type="DynamicFont" id=5]
[ext_resource path="res://icon.png" type="Texture" id=6]
[ext_resource path="res://assets/Textures_v2/Universal/Bars/bar_small_loyalty.png" type="Texture" id=7]
[ext_resource path="res://assets/images/traits/bowextradamage.png" type="Texture" id=8]
[ext_resource path="res://assets/images/gui/gui icons/icon_wits.png" type="Texture" id=9]
[ext_resource path="res://assets/Textures_v2/Universal/Bars/bar_small.png" type="Texture" id=10]
[ext_resource path="res://assets/Textures_v2/Universal/Buttons/button_exp_pressed.png" type="Texture" id=11]
[ext_resource path="res://assets/Textures_v2/Universal/Bars/bar_big.png" type="Texture" id=12]
[ext_resource path="res://assets/Textures_v2/Universal/Bars/bar_big_lust.png" type="Texture" id=13]
[ext_resource path="res://assets/images/sexicons/futa.png" type="Texture" id=14]
[ext_resource path="res://assets/images/gui/gui icons/icon_slaveinfo_star.png" type="Texture" id=15]
[ext_resource path="res://assets/images/gui/gui icons/icon_physics.png" type="Texture" id=16]
[ext_resource path="res://assets/Textures_v2/Universal/Bars/bar_big_mp.png" type="Texture" id=17]
[ext_resource path="res://assets/Textures_v2/Universal/Bars/bar_big_hp.png" type="Texture" id=18]
[ext_resource path="res://assets/Textures_v2/Universal/Buttons/button_exp.png" type="Texture" id=19]
[ext_resource path="res://assets/Textures_v2/Universal/Bars/bar_small_submission.png" type="Texture" id=20]
[ext_resource path="res://assets/Textures_v2/Universal/Icons/crown.png" type="Texture" id=21]
[ext_resource path="res://assets/Textures_v2/MANSION/Skills/Buttons/buttonskill.png" type="Texture" id=22]
[ext_resource path="res://assets/images/gui/gui icons/icon_charm.png" type="Texture" id=23]
[ext_resource path="res://assets/Textures_v2/Universal/Buttons/button_exp_hover.png" type="Texture" id=24]
[ext_resource path="res://src/scenes/RightClickReactButton.gd" type="Script" id=25]
[ext_resource path="res://gui_modules/Universal/Scripts/SlaveTooltip.gd" type="Script" id=26]
[ext_resource path="res://assets/images/iconsraces/human.png" type="Texture" id=27]
[ext_resource path="res://assets/images/iconsages/T.png" type="Texture" id=28]
[ext_resource path="res://assets/Fonts_v2/FontThemes/MainMiddle.tres" type="DynamicFont" id=29]
[ext_resource path="res://assets/images/gui/gui icons/growth_factor.png" type="Texture" id=30]
[ext_resource path="res://assets/images/gui/gui icons/charm.png" type="Texture" id=31]
[ext_resource path="res://assets/images/gui/gui icons/sex.png" type="Texture" id=32]
[ext_resource path="res://assets/images/gui/gui icons/physics_factor.png" type="Texture" id=33]
[ext_resource path="res://assets/images/gui/gui icons/tame_factor.png" type="Texture" id=34]
[ext_resource path="res://assets/images/gui/gui icons/wit.png" type="Texture" id=35]
[ext_resource path="res://assets/images/gui/gui icons/magic_factor.png" type="Texture" id=36]
[ext_resource path="res://assets/images/gui/gui icons/timid_factor.png" type="Texture" id=37]

[sub_resource type="DynamicFont" id=1]
size = 14
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 24
outline_color = Color( 0.878431, 0.878431, 0.878431, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 36
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 24
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 24
font_data = ExtResource( 4 )

[node name="SlaveTooltip" type="Panel"]
margin_right = 470.0
margin_bottom = 461.0
rect_min_size = Vector2( 470, 461 )
theme = ExtResource( 1 )
custom_styles/panel = ExtResource( 2 )
script = ExtResource( 26 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Panel" parent="."]
self_modulate = Color( 0, 0, 0, 0.823529 )
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 360.0
margin_right = 470.0
margin_bottom = 460.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="professions" type="GridContainer" parent="TextureRect"]
margin_left = 6.0
margin_top = 6.0
margin_right = 95.0
margin_bottom = 95.0
mouse_filter = 2
custom_constants/hseparation = 2
columns = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="TextureRect" parent="TextureRect/professions" groups=[
"ignore_rightclicks",
]]
visible = false
margin_right = 89.0
margin_bottom = 89.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 89, 89 )
texture = ExtResource( 22 )
expand = true
stretch_mode = 6
script = ExtResource( 25 )

[node name="Label" type="Label" parent="TextureRect/professions/Button"]
visible = false
margin_left = 6.0
margin_top = 64.0
margin_right = 84.0
margin_bottom = 83.0
custom_fonts/font = SubResource( 1 )
text = "Label"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProfIcon" type="TextureRect" parent="TextureRect/professions/Button"]
show_behind_parent = true
margin_left = 6.0
margin_top = 6.0
margin_right = 84.0
margin_bottom = 84.0
expand = true
stretch_mode = 1

[node name="Portrait" type="TextureRect" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 181.0
margin_bottom = 165.0
rect_min_size = Vector2( 120, 150 )
texture = ExtResource( 6 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="race" type="TextureRect" parent="."]
margin_left = 243.94
margin_top = 48.6564
margin_right = 283.94
margin_bottom = 88.6564
texture = ExtResource( 27 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sex" type="TextureRect" parent="."]
margin_left = 298.725
margin_top = 48.7094
margin_right = 338.725
margin_bottom = 88.7094
texture = ExtResource( 14 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="age" type="TextureRect" parent="."]
margin_left = 352.725
margin_top = 48.7094
margin_right = 392.725
margin_bottom = 88.7094
texture = ExtResource( 28 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 200.0
margin_top = 7.0
margin_right = 456.0
margin_bottom = 35.0
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0.878431, 0.878431, 0.878431, 1 )
bbcode_enabled = true
text = "Name"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="base_stats" type="VBoxContainer" parent="." groups=[
"hide_stranger",
]]
margin_left = 192.0
margin_top = 111.0
margin_right = 456.0
margin_bottom = 204.0
custom_constants/separation = 9
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hp" type="TextureProgress" parent="base_stats"]
margin_right = 264.0
margin_bottom = 25.0
rect_min_size = Vector2( 200, 25 )
value = 100.0
rounded = true
texture_over = ExtResource( 12 )
texture_progress = ExtResource( 18 )
nine_patch_stretch = true
stretch_margin_left = 5
stretch_margin_top = 5
stretch_margin_right = 5
stretch_margin_bottom = 5

[node name="Label" type="Label" parent="base_stats/hp"]
margin_top = -2.75696
margin_right = 262.0
margin_bottom = 29.243
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
text = "1.100"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mp" type="TextureProgress" parent="base_stats"]
margin_top = 34.0
margin_right = 264.0
margin_bottom = 59.0
rect_min_size = Vector2( 200, 25 )
value = 50.0
texture_over = ExtResource( 12 )
texture_progress = ExtResource( 17 )
nine_patch_stretch = true

[node name="Label" type="Label" parent="base_stats/mp"]
margin_top = -3.75696
margin_right = 262.0
margin_bottom = 28.243
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
text = "1.100"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lust" type="TextureProgress" parent="base_stats"]
margin_top = 68.0
margin_right = 264.0
margin_bottom = 93.0
rect_min_size = Vector2( 200, 25 )
value = 50.0
texture_over = ExtResource( 12 )
texture_progress = ExtResource( 13 )
nine_patch_stretch = true

[node name="Label" type="Label" parent="base_stats/lust"]
margin_top = -3.75696
margin_right = 263.0
margin_bottom = 28.243
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
text = "1.100"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="factors" type="GridContainer" parent="."]
light_mask = 0
margin_left = 192.0
margin_top = 220.0
margin_right = 463.0
margin_bottom = 372.0
rect_scale = Vector2( 1, 0.887 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/hseparation = 86
columns = 2
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="growth_factor" type="TextureRect" parent="factors" groups=[
"hide_master",
]]
light_mask = 0
margin_right = 50.0
margin_bottom = 35.0
rect_min_size = Vector2( 50, 35 )
mouse_filter = 0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 30 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="factors/growth_factor"]
light_mask = 0
margin_left = 69.2385
margin_top = -2.0
margin_right = 129.238
margin_bottom = 33.0
custom_fonts/font = ExtResource( 29 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
text = "Excellent"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="charm_factor" type="TextureRect" parent="factors"]
light_mask = 0
margin_left = 136.0
margin_right = 186.0
margin_bottom = 35.0
rect_min_size = Vector2( 50, 35 )
mouse_filter = 0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 31 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="factors/charm_factor"]
light_mask = 0
margin_left = 69.2385
margin_top = -2.0
margin_right = 129.238
margin_bottom = 33.0
custom_fonts/font = ExtResource( 29 )
text = "25"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="physics_factor" type="TextureRect" parent="factors"]
light_mask = 0
margin_top = 39.0
margin_right = 50.0
margin_bottom = 74.0
rect_min_size = Vector2( 50, 35 )
mouse_filter = 0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 33 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="factors/physics_factor"]
light_mask = 0
margin_left = 69.2385
margin_top = -2.0
margin_right = 129.238
margin_bottom = 33.0
custom_fonts/font = ExtResource( 29 )
text = "25"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sexuals_factor" type="TextureRect" parent="factors"]
light_mask = 0
margin_left = 136.0
margin_top = 39.0
margin_right = 186.0
margin_bottom = 74.0
rect_min_size = Vector2( 50, 35 )
mouse_filter = 0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 32 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="factors/sexuals_factor"]
light_mask = 0
margin_left = 69.2385
margin_top = -2.0
margin_right = 129.238
margin_bottom = 33.0
custom_fonts/font = ExtResource( 29 )
text = "25"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="magic_factor" type="TextureRect" parent="factors"]
light_mask = 0
margin_top = 78.0
margin_right = 50.0
margin_bottom = 113.0
rect_min_size = Vector2( 50, 35 )
mouse_filter = 0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 36 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="factors/magic_factor"]
light_mask = 0
margin_left = 69.2385
margin_top = -2.0
margin_right = 129.238
margin_bottom = 33.0
custom_fonts/font = ExtResource( 29 )
text = "25"
clip_text = true

[node name="tame_factor" type="TextureRect" parent="factors" groups=[
"hide_master",
]]
light_mask = 0
margin_left = 136.0
margin_top = 78.0
margin_right = 186.0
margin_bottom = 113.0
rect_min_size = Vector2( 50, 35 )
mouse_filter = 0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 34 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="factors/tame_factor"]
light_mask = 0
margin_left = 69.2385
margin_top = -2.0
margin_right = 129.238
margin_bottom = 33.0
custom_fonts/font = ExtResource( 29 )
text = "25"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="wits_factor" type="TextureRect" parent="factors"]
light_mask = 0
margin_top = 117.0
margin_right = 50.0
margin_bottom = 152.0
rect_min_size = Vector2( 50, 35 )
mouse_filter = 0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 35 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="factors/wits_factor"]
light_mask = 0
margin_left = 69.2385
margin_top = -2.0
margin_right = 129.238
margin_bottom = 33.0
custom_fonts/font = ExtResource( 29 )
text = "25"
clip_text = true

[node name="timid_factor" type="TextureRect" parent="factors" groups=[
"hide_master",
]]
light_mask = 0
margin_left = 136.0
margin_top = 117.0
margin_right = 186.0
margin_bottom = 152.0
rect_min_size = Vector2( 50, 35 )
mouse_filter = 0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 37 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="factors/timid_factor"]
light_mask = 0
margin_left = 69.2385
margin_top = -2.0
margin_right = 129.238
margin_bottom = 33.0
custom_fonts/font = ExtResource( 29 )
text = "25"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="growth" type="Label" parent="."]
margin_left = 73.0
margin_top = 210.0
margin_right = 179.0
margin_bottom = 242.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
text = "Physics"
align = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="physics" type="Label" parent="."]
margin_left = 72.833
margin_top = 250.0
margin_right = 122.833
margin_bottom = 282.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
text = "Physics"
align = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="physics2" type="Label" parent="."]
margin_left = 130.449
margin_top = 250.0
margin_right = 180.449
margin_bottom = 282.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
text = "Physics"
align = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="wits" type="Label" parent="."]
margin_left = 71.641
margin_top = 285.0
margin_right = 121.641
margin_bottom = 317.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
text = "Wits"
align = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="wits2" type="Label" parent="."]
margin_left = 130.052
margin_top = 285.0
margin_right = 180.052
margin_bottom = 317.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
text = "Wits"
align = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="charm" type="Label" parent="."]
margin_left = 71.244
margin_top = 325.0
margin_right = 121.244
margin_bottom = 357.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
text = "Charm"
align = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="charm2" type="Label" parent="."]
margin_left = 130.449
margin_top = 325.0
margin_right = 180.449
margin_bottom = 357.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
text = "Charm"
align = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="Control" parent="."]
margin_left = 16.013
margin_top = 187.0
margin_right = 56.013
margin_bottom = 361.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exp" type="TextureButton" parent="TextureRect2"]
margin_left = -8.0
margin_top = -14.0
margin_right = 48.0
margin_bottom = 20.0
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 24 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TextureRect2/Exp"]
margin_left = -1.0
margin_right = 52.0
margin_bottom = 34.0
text = "EXP"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="growth_factor" type="TextureRect" parent="TextureRect2"]
margin_left = 2.20064
margin_top = 26.7605
margin_right = 42.2006
margin_bottom = 51.7605
mouse_filter = 0
texture = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="physics" type="TextureRect" parent="TextureRect2"]
margin_left = 2.201
margin_top = 67.0
margin_right = 42.201
margin_bottom = 92.0
mouse_filter = 0
texture = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="wits" type="TextureRect" parent="TextureRect2"]
margin_top = 106.0
margin_right = 40.0
margin_bottom = 131.0
mouse_filter = 0
texture = ExtResource( 9 )

[node name="charm" type="TextureRect" parent="TextureRect2"]
margin_left = 3.074
margin_top = 143.0
margin_right = 43.074
margin_bottom = 168.0
mouse_filter = 0
texture = ExtResource( 23 )

[node name="exp" type="Label" parent="."]
margin_left = 63.0
margin_top = 173.0
margin_right = 181.0
margin_bottom = 205.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Control" parent="."]
visible = false
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 200.0
margin_top = 220.0
margin_right = 452.0
margin_bottom = 353.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="obedlabel" type="Label" parent="Panel" groups=[
"hide_master",
"hide_stranger",
]]
margin_left = 119.711
margin_top = -1.52588e-05
margin_right = 198.711
margin_bottom = 40.0
rect_scale = Vector2( 0.627771, 0.627771 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
text = "25"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="TextureRect" parent="Panel/obedlabel"]
margin_left = -67.5715
margin_top = -25.487
margin_right = 8.42854
margin_bottom = 45.513
texture = ExtResource( 21 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="authoritylabel" type="Label" parent="Panel" groups=[
"hide_master",
"hide_stranger",
]]
margin_left = 3.8147e-06
margin_top = 69.682
margin_right = 238.0
margin_bottom = 101.682
mouse_filter = 0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
text = "Authority: "
align = 1

[node name="authoritylabel2" type="Label" parent="Panel" groups=[
"hide_master",
"hide_stranger",
]]
margin_left = 14.7019
margin_top = 21.41
margin_right = 26.7019
margin_bottom = 53.41
mouse_filter = 0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
text = "L"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="authoritylabel3" type="Label" parent="Panel" groups=[
"hide_master",
"hide_stranger",
]]
visible = false
margin_left = 14.7019
margin_top = 54.665
margin_right = 27.7019
margin_bottom = 86.665
mouse_filter = 0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
text = "S"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="loyaltylabel" type="TextureProgress" parent="Panel" groups=[
"hide_master",
"hide_stranger",
]]
margin_left = 32.0
margin_top = 25.752
margin_right = 214.0
margin_bottom = 53.752
value = 100.0
texture_over = ExtResource( 10 )
texture_progress = ExtResource( 7 )

[node name="submissionlabel" type="TextureProgress" parent="Panel" groups=[
"hide_master",
"hide_stranger",
]]
visible = false
margin_left = 32.0
margin_top = 58.546
margin_right = 214.0
margin_bottom = 86.546
value = 100.0
texture_over = ExtResource( 10 )
texture_progress = ExtResource( 20 )

[node name="buffscontainer" type="HBoxContainer" parent="."]
margin_left = 7.33258
margin_top = 463.26
margin_right = 463.333
margin_bottom = 514.26
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="TextureRect" parent="buffscontainer"]
visible = false
margin_right = 51.0
margin_bottom = 51.0
rect_min_size = Vector2( 51, 51 )
texture = ExtResource( 8 )
expand = true
stretch_mode = 1

[node name="Label" type="Label" parent="buffscontainer/Button"]
margin_top = 24.0
margin_right = 49.0
margin_bottom = 51.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "5"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
